trying to fix blurry nav

--- a/styles.css
+++ b/styles.css
@@ -252,10 +252,19 @@ nav.nav-projects {
     display: flex;
 }
 
-.nav-sticky {
+.nav-sticky::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backdrop-filter: blur(7px);
     backdrop-filter: blur(7px);
+    z-index: -1;
+}
+
+.nav-sticky {
     position: fixed;
-    z-index: 3;
+    z-index: 1;
     border-bottom: 1px solid var(--msd-gray-3-20);
     transition: all 300ms cubic-bezier(0.2, 0, 1, 1), border-bottom 0ms;
 }
